# command-line-handler

./: CMakeLists.txt  README.md  example.cpp
include/: CommandLine.h  CommandLine.h.in  CommandLineHandler.hpp  FloatProperty.hpp  IProperty.hpp  IntegerProperty.hpp  Property.hpp  PropertyFactory.hpp  PropertyInclude.hpp  PropertyType.hpp  StringProperty.hpp  constants.hpp  utils.hpp
src/: CommandLineHandler.cpp  FloatPropertyTest.cpp  IntegerProperty.cpp  Property.cpp  PropertyFactory.cpp  utils.cpp
test/: CommandLineHandlerTest.cpp  DefineMacroTest.cpp  FloatPropertyTest.cpp  IntegerPropertyTest.cpp  PropertyFactoryTest.cpp  StringPropertyTest.cpp
